--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 </div>
             </div>
             <div class="value-display">
-                <span class="knob-value value-large" x-text="Math.floor(knobs.masterVolume.value * 100 / 127)"></span>
+                <span class="knob-value" x-text="Math.floor(knobs.masterVolume.value * 100 / 127)"></span>
                 <span class="knob-label">Vol</span>
             </div>
         </div>
