--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
                 </div>
 
-                <div class="knob-wrapper" :style="fxParam2Visibility">
+                <div class="knob-wrapper" x-show="fxParam2Visibility">
                     <div class="knob" @mousedown="startKnobDrag('fxParam2', $event)"
                         @touchstart="startKnobDrag('fxParam2', $event)">
                         <div class="knob-indicator indicator-small"
@@ -691,8 +691,6 @@
 
             // MIDI controller instance
             midi: null,
-            midiClockTimer: null,
-            lfoTimer: null,
 
             // Initialization
             lfoPhases: Array(10).fill(0),
@@ -1129,11 +1127,7 @@
                         });
 
                     } catch (error) {
-                        console.warn('AudioWorklet not supported, falling back to setTimeout timing:', error);
-
-                        // Fallback to setTimeout-based timing if AudioWorklet fails
-                        this.midi.sendSystemRealTime(0xFA); // MIDI Start
-                        this.startFallbackTiming();
+                        console.error('AudioWorklet not supported', error);
                     }
 
                 } else {
@@ -1141,123 +1135,7 @@
                     if (this.timingWorklet) {
                         this.timingWorklet.port.postMessage({ type: 'stop' });
                     }
-
-                    // Clear any fallback timers
-                    if (this.schedulerTimer) {
-                        clearTimeout(this.schedulerTimer);
-                        this.schedulerTimer = null;
-                    }
-                    if (this.midiClockTimer) {
-                        clearTimeout(this.midiClockTimer);
-                        this.midiClockTimer = null;
-                    }
-                    if (this.lfoTimer) {
-                        clearTimeout(this.lfoTimer);
-                        this.lfoTimer = null;
-                    }
-
-                    // Send MIDI stop if not using AudioWorklet
-                    if (!this.timingWorklet) {
-                        this.midi.sendSystemRealTime(0xFC); // MIDI Stop
-                    }
-
-                    // Smoothly return to user values instead of instant clear
-                    this.smoothReturnToUserValues();
                 }
-            },
-
-            startFallbackTiming() {
-                // Fallback lookahead scheduler for browsers without AudioWorklet support
-                const startTime = this.audioContext.currentTime;
-                const lookaheadTime = 0.025; // Look ahead 25ms
-                const scheduleInterval = 0.025; // Schedule every 25ms
-
-                // MIDI Clock timing (24 pulses per quarter note)
-                const midiInterval = 60.0 / (this.bpm * 24);
-                let nextMidiTime = startTime + midiInterval;
-
-                // LFO timing at 100Hz
-                const lfoInterval = 0.01; // 10ms in seconds
-                let nextLfoTime = startTime + lfoInterval;
-
-                // Lookahead scheduler function
-                const scheduler = () => {
-                    if (!this.startStopActive) return;
-
-                    const now = this.audioContext.currentTime;
-                    const scheduleAheadTime = now + lookaheadTime;
-
-                    // Schedule MIDI clock events
-                    while (nextMidiTime < scheduleAheadTime) {
-                        // Schedule MIDI clock at exact audio time
-                        setTimeout(() => {
-                            if (this.startStopActive) {
-                                this.midi.sendSystemRealTime(0xF8); // MIDI Clock
-                            }
-                        }, Math.max(0, (nextMidiTime - now) * 1000));
-
-                        nextMidiTime += midiInterval;
-                    }
-
-                    // Schedule LFO events
-                    while (nextLfoTime < scheduleAheadTime) {
-                        // Capture current LFO time for closure
-                        const scheduledLfoTime = nextLfoTime;
-
-                        // Schedule LFO update at exact audio time
-                        setTimeout(() => {
-                            if (this.startStopActive) {
-                                for (let i = 0; i < 6; i++) {
-                                    this.runLfo(i, lfoInterval);
-                                }
-                            }
-                        }, Math.max(0, (scheduledLfoTime - now) * 1000));
-
-                        nextLfoTime += lfoInterval;
-                    }
-
-                    // Schedule next lookahead check
-                    this.schedulerTimer = setTimeout(scheduler, scheduleInterval * 1000);
-                };
-
-                // Start the lookahead scheduler
-                scheduler();
-            },
-
-            smoothReturnToUserValues() {
-                // Create a smooth transition back to user values over 200ms
-                const transitionDuration = 200; // ms
-                const steps = 20;
-                const stepDuration = transitionDuration / steps;
-
-                // Store initial LFO values for interpolation
-                const initialValues = { ...this.lfoOutputValues };
-
-                let currentStep = 0;
-                const transitionTimer = setInterval(() => {
-                    currentStep++;
-                    const progress = currentStep / steps;
-
-                    // Interpolate between LFO values and user values
-                    for (const key in initialValues) {
-                        const [trackIdx, cc] = key.split('-').map(Number);
-                        const lfoValue = initialValues[key];
-                        const userValue = this.trackValues[key] || 0;
-
-                        // Linear interpolation
-                        const interpolatedValue = lfoValue + (userValue - lfoValue) * progress;
-                        this.lfoOutputValues[key] = interpolatedValue;
-
-                        // Send MIDI for the interpolated value
-                        this.midi.sendCC(trackIdx, cc, Math.round(interpolatedValue));
-                    }
-
-                    if (currentStep >= steps) {
-                        clearInterval(transitionTimer);
-                        // Clear LFO output values completely after transition
-                        this.lfoOutputValues = {};
-                    }
-                }, stepDuration);
             },
 
             updateBpm() {
@@ -1423,9 +1301,7 @@
                 const channelData = this.fx.channels[this.fx.currentChannel];
                 const currentType = channelData.types[Math.floor(this.fx.channels[this.fx.currentChannel].engine / (128 / channelData.types.length))];
 
-                // Hide param2 for certain FX types
-                const hideParam2 = ['REV', 'CHO', 'DLY', 'CRU', 'DST', 'TRM', 'FRZ', 'TPE'].includes(currentType);
-                return hideParam2 ? 'visibility: hidden' : 'visibility: visible';
+                return ['FLT'].includes(currentType);
             },
 
             get sliderOutputValue() {
